--- a/index.html
+++ b/index.html
@@ -644,8 +644,9 @@
                         <div class="phone-frame">
                             <div class="phone-notch"></div>
                             <div class="phone-screen">
+                                <img src="image.png" style="width: 100%; height: 100%; object-fit: cover; border-radius: 32px;">
+                                
                                 <div class="screen-placeholder">
-                                    <!-- INSERIR SCREENSHOT DO APP - TELA INICIAL COM CATEGORIAS -->
                                     <p>📱</p>
                                     <p>Tela do app mostrando as categorias da cidade</p>
                                 </div>
